--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@auth0/angular-jwt": "^4.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-datatables": "^9.0.2",
+    "angular-jwt": "^0.1.11",
     "angular2-multiselect-dropdown": "^4.6.3",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.5.0",
