--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -36,6 +36,7 @@
     "popper": "^1.0.1",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.4",
+    "save": "^2.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
