--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-dropzone": "^2.1.2",
+    "ngx-mask": "^8.1.6",
     "ngx-print": "^1.2.0-beta.5",
     "ngx-spinner": "^9.0.2",
     "popper": "^1.0.1",
