bill inward outward report

--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -36,6 +36,14 @@
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/datatables.net/js/jquery.dataTables.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/jszip/dist/jszip.js",
+              "./node_modules/datatables.net-buttons/js/dataTables.buttons.js",
+              "src/scripts/pdfmake.min.js",
+              "src/scripts/vfs_fonts.js",
+              "./node_modules/datatables.net-buttons/js/buttons.colVis.js",
+              "./node_modules/datatables.net-buttons/js/buttons.flash.js",
+              "./node_modules/datatables.net-buttons/js/buttons.html5.js",
+              "./node_modules/datatables.net-buttons/js/buttons.print.js",
               "src/scripts/qz-tray.js",
               "src/scripts/rsvp-3.1.0.min.js",
               "src/scripts/sha-256.min.js"
