--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -29,8 +29,11 @@
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.10.21",
+    "datatables.net-buttons": "^1.6.2",
+    "datatables.net-buttons-dt": "^1.6.2",
     "datatables.net-dt": "^1.10.21",
     "jquery": "^3.5.1",
+    "jszip": "^3.5.0",
     "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-dropzone": "^2.1.2",
