--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -30,11 +30,13 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "src/select.dataTables.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/datatables.net/js/jquery.dataTables.js",
+              "src/scripts/dataTables.select.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
               "./node_modules/jszip/dist/jszip.js",
               "./node_modules/datatables.net-buttons/js/dataTables.buttons.js",
