--- a/nlog.config
+++ b/nlog.config
@@ -4,7 +4,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <targets async="true">    
-    <target name="ErrorLogFile" xsi:type="File" fileName="${basedir}/LogFiles/Log_Error_${shortdate}.log" layout="${longdate} ${message}">
+    <target name="ErrorLogFile" xsi:type="File" fileName="${gdc:item=appbasepath}/LogFiles/Log_Error_${shortdate}.log" layout="${longdate} ${message}">
       <layout xsi:type="JsonLayout">
         <attribute name="date" layout="${longdate}" />
         <attribute name="level" layout="${level:upperCase=true}"/>
@@ -12,15 +12,8 @@
         <attribute name="exception" layout="${exception:format=ToString}" />
       </layout>
     </target>
-    <target name="InfoLogFile" xsi:type="File" fileName="${basedir}/LogFiles/Log_Info_${shortdate}.log" layout="${longdate} ${message}">
-      <layout xsi:type="JsonLayout">
-        <attribute name="date" layout="${longdate}" />
-        <attribute name="level" layout="${level:upperCase=true}"/>
-        <attribute name="message" layout="${message}" />
-        <attribute name="exception" layout="${exception:format=ToString}" />
-      </layout>
-    </target>
-    <target name="WarnLogFile" xsi:type="File" fileName="${basedir}/LogFiles/Log_Warn_${shortdate}.log" layout="${longdate} ${message}">
+
+    <target name="WarnLogFile" xsi:type="File" fileName="${gdc:item=appbasepath}/LogFiles/Log_Warn_${shortdate}.log" layout="${longdate} ${message}">
       <layout xsi:type="JsonLayout">
         <attribute name="date" layout="${longdate}" />
         <attribute name="level" layout="${level:upperCase=true}"/>
@@ -30,8 +23,8 @@
     </target>    
   </targets>
   <rules>
-     <logger name="*" minlevel="Trace" maxlevel="Info" writeTo="InfoLogFile" />
+    
     <logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="WarnLogFile" />
-    <logger name="*" minlevel="Error" writeTo="ErrorLogFile" />      
+    <logger name="*" minlevel="Error"  writeTo="ErrorLogFile" />      
   </rules> 
 </nlog>
