put method replace with get

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=gopalcomputer.database.windows.net;Initial Catalog=gopal_db;Persist Security Info=False;User ID=gopal;Password=Password@123;MultipleActiveResultSets=False;Encrypt=True;"
+  "ConnectionString": "Data Source=localhost;Initial Catalog=GopalDb;User ID=sa;Password=root;"
 }
